--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,12 @@
-# Podfile for Flutter iOS — global '-G' scrub + modern defaults
+# Podfile for Flutter iOS (Xcode 15/16)
+
 platform :ios, '15.5'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
-# Make CocoaPods target the correct workspace
+# Ensure Pods integrate into the correct workspace
 workspace 'Runner.xcworkspace'
 
+# Map build configurations
 project 'Runner', {
   'Debug'   => :debug,
   'Profile' => :release,
@@ -28,66 +30,68 @@ end
 # Load Flutter podhelper (do NOT use ENV['FLUTTER_ROOT'])
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), resolved_flutter_root)
 
-# Flutter CocoaPods setup
+# Flutter’s CocoaPods setup (required)
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Frameworks are the most compatible path for mixed Swift/Obj-C pods.
+  # Frameworks keep plugins happy (e.g., 'Flutter/Flutter.h' imports)
   use_frameworks! :linkage => :static
 
   # Pull in Flutter + all plugin pods
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
-# ---- Post-install: GLOBAL '-G' scrub across ALL build settings keys ----
+# ---- Post-install: scrub bad flags globally & lock sane build settings ----
 post_install do |installer|
   ios_target = '15.5'
 
-  # Remove any '-G' or '-G<number>' tokens from a string/array value
+  # Return tokens with ALL -G / -G<number> removed.
   scrub_tokens = proc do |val|
-    return val if val.nil?
-    tokens =
-      case val
-      when Array then val.flatten.compact.map(&:to_s)
-      else             val.to_s.split(/\s+/)
-      end
-    cleaned = tokens.reject { |t| t == '-G' || t =~ /\A-G\d+\z/ }
-    # keep the original type shape CocoaPods likes
-    val.is_a?(Array) ? cleaned : cleaned.join(' ')
+    return nil if val.nil?
+    tokens = case val
+      when Array  then val.flatten.compact.map(&:to_s)
+      else              val.to_s.split(' ')
+    end
+    tokens.reject { |t| t == '-G' || t.match?(/\A-G\d+\z/) }
   end
 
-  # Scrub ALL keys in a build settings hash (including sdk-scoped, e.g. OTHER_CFLAGS[sdk=iphoneos*])
-  scrub_build_settings_hash = proc do |bs|
-    bs.keys.each do |k|
-      v = bs[k]
-      next unless v.is_a?(String) || v.is_a?(Array)
-      # fast path: skip if no -G present
-      next unless v.to_s.include?('-G')
-      bs[k] = scrub_tokens.call(v)
+  # Scrub ANY string/array setting in a settings hash.
+  scrub_build_settings_hash! = proc do |settings|
+    settings.each do |k, v|
+      case v
+      when Array, String
+        cleaned = scrub_tokens.call(v)
+        settings[k] = cleaned.is_a?(Array) ? cleaned : cleaned&.join(' ')
+      end
     end
   end
 
-  # Apply to Pods project + every user project (Runner)
-  projects = [installer.pods_project] + installer.aggregate_targets.map(&:user_project).uniq
-
-  projects.each do |proj|
-    # Project-level configurations
-    proj.build_configurations.each do |cfg|
+  # Scrub one Xcode project (configs + targets)
+  scrub_project! = proc do |project|
+    project.build_configurations.each do |cfg|
       cfg.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = ios_target
-      scrub_build_settings_hash.call(cfg.build_settings)
+      scrub_build_settings_hash!.call(cfg.build_settings)
     end
-
-    # Target-level configurations
-    proj.targets.each do |t|
+    project.targets.each do |t|
       t.build_configurations.each do |cfg|
-        bs = cfg.build_settings
-        bs['IPHONEOS_DEPLOYMENT_TARGET'] = ios_target
-        bs['ENABLE_BITCODE'] = 'NO'
-        scrub_build_settings_hash.call(bs)
+        cfg.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = ios_target
+        cfg.build_settings['ENABLE_BITCODE'] = 'NO'
+        scrub_build_settings_hash!.call(cfg.build_settings)
       end
     end
   end
 
-  # Keep Flutter default post install at the end (does not re-add -G)
+  # Run Flutter’s defaults first, then scrub
   flutter_post_install(installer) if defined?(flutter_post_install)
+
+  # Scrub Pods project
+  scrub_project!.call(installer.pods_project)
+
+  # Scrub Runner user projects
+  installer.aggregate_targets.map(&:user_project).uniq.each do |proj|
+    scrub_project!.call(proj)
+  end
+
+  # Optional diagnostics (visible in pod install logs)
+  # puts "[DIAG] Searched & scrubbed -G flags across Pods + Runner projects."
 end
