--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 ﻿name: nyari
 description: A lifestyle & local discovery app built with Flutter + Firebase
-publish_to: 'none' # not publishing to pub.dev
+publish_to: 'none'
 
-version: 1.0.0+87
+version: 1.0.0+89
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -12,28 +12,28 @@ dependencies:
     sdk: flutter
 
   # Core Firebase
-  firebase_core: ^2.31.1
-  cloud_firestore: ^4.17.2
-  firebase_auth: ^4.19.5
-  firebase_storage: ^11.7.7
+  firebase_core: 2.31.1
+  cloud_firestore: 4.17.2
+  firebase_auth: 4.19.5
+  firebase_storage: 11.7.7
 
   # Maps + Location
-  google_maps_flutter: ^2.12.3   # ✅ compatible with Dart 3.6
-  geolocator: ^11.1.0
-  geocoding: ^3.0.0
+  google_maps_flutter: 2.12.3
+  geolocator: 11.1.0
+  geocoding: 3.0.0
 
   # UI / State
-  provider: ^6.1.2
-  intl: ^0.19.0
+  provider: 6.1.2
+  intl: 0.19.0
 
   # Icons & UI polish
-  font_awesome_flutter: ^10.7.0
-  cupertino_icons: ^1.0.8
+  font_awesome_flutter: 10.7.0
+  cupertino_icons: 1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0   # ✅ works with Dart 3.6
+  flutter_lints: 5.0.0
 
 flutter:
   uses-material-design: true
