--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 ﻿name: nyari
 description: A lifestyle & local discovery app built with Flutter + Firebase
-publish_to: 'none'
+publish_to: "none"
 
+# App version: <marketing>+<build>
 version: 1.0.0+89
 
 environment:
@@ -11,29 +12,30 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Core Firebase
-  firebase_core: 2.31.1
-  cloud_firestore: 4.17.2
-  firebase_auth: 4.19.5
-  firebase_storage: 11.7.7
+  # --- Firebase (mutually compatible pins) ---
+  firebase_core: ^2.32.0
+  cloud_firestore: ^4.17.5
+  firebase_auth: ^4.20.0
+  firebase_storage: ^11.7.7
 
-  # Maps + Location
-  google_maps_flutter: 2.12.3
-  geolocator: 11.1.0
-  geocoding: 3.0.0
+  # --- Maps & Location ---
+  google_maps_flutter: ^2.12.3
+  geolocator: ^11.1.0
+  geocoding: ^3.0.0
 
-  # UI / State
-  provider: 6.1.2
-  intl: 0.19.0
-
-  # Icons & UI polish
-  font_awesome_flutter: 10.7.0
-  cupertino_icons: 1.0.8
+  # --- UI / State ---
+  provider: ^6.1.2
+  intl: ^0.19.0
+  font_awesome_flutter: ^10.7.0
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: 5.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
+  # assets:
+  #   - assets/
+  #   - assets/images/
