--- a/ios/Flutter/Release.xcconfig
+++ b/ios/Flutter/Release.xcconfig
@@ -1,2 +1,2 @@
-#include "Generated.xcconfig"
-OTHER_LDFLAGS = $(inherited) -ObjC
+#include? "Generated.xcconfig"
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.release.xcconfig"
