--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,8 @@
 description: A lifestyle & local discovery app built with Flutter + Firebase
 publish_to: "none"
 
-# App version: <marketing>+<build>
-version: 1.0.0+101
+# App version: 1.0.0+106
+version: 1.0.0+106
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -39,3 +39,4 @@ flutter:
   # assets:
   #   - assets/
   #   - assets/images/
+
