--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,4 @@
-﻿platform :ios, '15.5'
+platform :ios, '15.5'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', { 'Debug' => :debug, 'Profile' => :release, 'Release' => :release }
